test/spec_vectors/i32/fail/module_75.wat
(module (func (result i32) (i32.ge_s (i64.const 0) (f32.const 0))))